Update about me

--- a/Home.html
+++ b/Home.html
@@ -55,7 +55,7 @@
         <section id="About_me">
             <h1 style="width: 300px; text-align: center; border-bottom: #1e1e1e solid; margin-left: 524.5px; font-family: 'Cera Round Pro';">About me</h1>
             <p>
-                Hi i'm Nguyen Viet Kim (or Kim Curry), currently a student of Faculty of Information Technology, Ho Chi Minh University of Science. I don't have any experience in working for i'm still a fresher, however, i pride myself on my creativity, self-learn ability, adaptability and teamwork skills. I'm on my way to be a Software Developer because to me, it is pleasing putting a software up, especially a game. I'm also teaching myself Python, HTML, CSS and Javascript. Building up and designing a website is another hobby of mine.
+                Hi i'm Nguyen Viet Kim (or Kim Curry), currently a student of Faculty of Information Technology, Ho Chi Minh University of Science. I don't have any experience in working for i'm still a fresher, however, i pride myself on my creativity, self-learn ability, adaptability and teamwork skills. I'm on my way to be a Software Developer because to me, it is pleasing putting a software up, especially a game. I'm also teaching myself Python, HTML, CSS and Javascript. Building up and designing a website is another interest of mine.
             </p>
             <div id="Cards">
                 <div class="About_card">
