--- a/Home.html
+++ b/Home.html
@@ -37,28 +37,27 @@
             <img src="Images/head_background.png" alt="head background" style="width: 1000px; height: 400px; margin: 0; user-select: none;">
         </section>
 
-        <nav class="topnav">
+        <!-- <nav class="topnav">
             <a class="active" href="javascript:void(0)"><i class="fa fa-fw fa-home"></i> Home</a>
             <a href="javascript:void(0)"><i class="fa-solid fa-list-check"></i> Projects</a>
-        </nav>
+        </nav> -->
 
         <section id="Greeting">
             <img src="Images/My pic.png" id="Mypic">
             <div id="First_Intro">
-                <p>Welcome to my website!</p>
-                <p>On this website, i'll be introducing myself and my projects</p>
-                <p>This is my first-ever website, so do let me know your opinions about it</p>
-                <p>Scroll down for more information</p>
+                <p>Hi i'm Nguyen Viet Kim (or Kim Curry), currently a student of Faculty of Information Technology, Ho Chi Minh University of Science.</p>
+                <p>I don't have any experience in working for i'm still a fresher, however, i pride myself on my creativity, self-learn ability, adaptability and teamwork skills. </p>
+                <p>I'm on my way to be a Software Developer because to me, it is pleasing putting a software up, especially a game. I'm also teaching myself Python, HTML, CSS and Javascript. Building up and designing a website is another interest of mine.</p>
             </div>    
         </section>
 
-        <section id="About_me">
-            <h1 style="width: 300px; text-align: center; border-bottom: #1e1e1e solid; margin-left: 524.5px; font-family: 'Cera Round Pro';">About me</h1>
+        <section id="Achievements">
+            <h1 style="width: 300px; text-align: center; margin-left: 524.5px; font-family: 'Cera Round Pro'; font-size: 30px;">Achievements</h1>
             <p>
-                Hi i'm Nguyen Viet Kim (or Kim Curry), currently a student of Faculty of Information Technology, Ho Chi Minh University of Science. I don't have any experience in working for i'm still a fresher, however, i pride myself on my creativity, self-learn ability, adaptability and teamwork skills. I'm on my way to be a Software Developer because to me, it is pleasing putting a software up, especially a game. I'm also teaching myself Python, HTML, CSS and Javascript. Building up and designing a website is another interest of mine.
+                
             </p>
             <div id="Cards">
-                <div class="About_card">
+                <div class="Achievement_card">
                     <i class="fa-solid fa-award" style="font-size: 30px;"></i>
                     <p style="margin: 0%; font-weight: 700; font-size: 20px;">IELTS</p>
                     <p></p>
@@ -71,13 +70,13 @@
                     <p style="border-bottom: 2px solid; margin: 0%;"></p>
                     <p style="margin: 0%;">Overall: 7.0</p>
                 </div>
-                <div class="About_card">
+                <div class="Achievement_card">
                     <i class="fa-solid fa-bars-progress" style="font-size: 30px;"></i>
                     <p style="margin: 0%; font-weight: 700; font-size: 20px;">PROJECTS</p>
                     <p></p>
                     <p style="margin: 0%;">5+ completed</p>
                 </div>
-                <div class="About_card">
+                <div class="Achievement_card">
                     <i class="fa-solid fa-code" style="font-size: 30px;"></i>
                     <p style="margin: 0%; font-weight: 700; font-size: 20px;">Languages</p>
                     <p></p>
@@ -92,7 +91,7 @@
         </section>
         
         <section id="My_skills">
-            <h1 style="width: 300px; text-align: center; border-bottom: #1e1e1e solid; margin-left: 524.5px;">My skills</h1>
+            <h1 style="width: 300px; text-align: center; margin-left: 524.5px; font-family: 'Cera Round Pro'; font-size: 30px;">My skills</h1>
             <div id="Skills">
                 <p>C++</p>
                 <div class="container">
