Update social media links

--- a/Home.html
+++ b/Home.html
@@ -127,17 +127,17 @@
         <section id="footer">
             <div id="Kimnguyen">Kim Nguyen</div>
             <div id="Contact_container">
-                <a href="https://www.facebook.com/KGC31.dev/">
+                <a href="https://www.facebook.com/KGC31.dev/" target="_blank">
                     <div class="contact">
                         <i class="fa-brands fa-facebook-f"></i>
                     </div>
                 </a>
-                <a href="https://www.instagram.com/kgc31.dev/">
+                <a href="https://www.instagram.com/kgc31.dev/" target="_blank">
                     <div class="contact">
                         <i class="fa-brands fa-instagram"></i>
                     </div>
                 </a>
-                <a href="https://github.com/KGC31">
+                <a href="https://github.com/KGC31" target="_blank">
                     <div class="contact">
                         <i class="fa-brands fa-github"></i>
                     </div>
